# 4-zishkaz

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: comparer.c  converter.c  functions.c  negative.c  negative.h  qdbmp.c  qdbmp.h  task4.h
